# swagger.yaml
@@ -26,9 +26,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/AuthResponse'
 
-  /users:
+  /user:
     post:
       summary: Cadastra um novo usuário
+      operationId: createUser
       requestBody:
         required: true
         content:
@@ -39,10 +40,11 @@ paths:
         '201':
           description: Usuário criado
 
-  /clients:
+  /client:
     post:
       tags: [Client]
       summary: Cadastra um novo cliente
+      operationId: createClient
       security:
         - bearerAuth: []
       requestBody:
@@ -54,10 +56,11 @@ paths:
       responses:
         '201':
           description: Cliente cadastrado
-
+  /clients:
     get:
       tags: [Client]
       summary: Lista todos os clientes
+      operationId: getAllClients
       security:
         - bearerAuth: []
       responses:
@@ -70,10 +73,11 @@ paths:
                 items:
                   $ref: '#/components/schemas/Client'
 
-  /clients/{id}:
+  /client/{id}:
     get:
       tags: [Client]
       summary: Busca um cliente pelo ID
+      operationId: getClient
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -92,6 +96,7 @@ paths:
     put:
       tags: [Client]
       summary: Atualiza os dados de um cliente
+      operationId: updateClient
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -112,6 +117,7 @@ paths:
     delete:
       tags: [Client]
       summary: Remove um cliente
+      operationId: excludeClient
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -123,10 +129,11 @@ paths:
         '204':
           description: Cliente removido
 
-  /products:
+  /product:
     post:
       tags: [Product]
       summary: Cadastra um novo produto
+      operationId: createProduct
       security:
         - bearerAuth: []
       requestBody:
@@ -138,10 +145,11 @@ paths:
       responses:
         '201':
           description: Produto cadastrado
-
+  /products:
     get:
       tags: [Product]
       summary: Lista todos os produtos
+      operationId: getAllProducts
       security:
         - bearerAuth: []
       responses:
@@ -158,6 +166,7 @@ paths:
     get:
       tags: [Product]
       summary: Busca um produto pelo ID
+      operationId: getProduct
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -176,6 +185,7 @@ paths:
     put:
       tags: [Product]
       summary: Atualiza os dados de um produto
+      operationId: updateProduct
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -196,6 +206,7 @@ paths:
     delete:
       tags: [Product]
       summary: Remove um produto
+      operationId: deleteProduct
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -207,10 +218,11 @@ paths:
         '204':
           description: Produto removido
 
-  /invoices:
+  /invoice:
     post:
       tags: [Invoice]
       summary: Cria um novo orçamento
+      operationId: createInvoice
       security:
         - bearerAuth: []
       requestBody:
@@ -226,10 +238,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InvoiceResponse'
-
+  /invoices:
     get:
       tags: [Invoice]
       summary: Lista todos os orçamentos
+      operationId: getAllInvoices
       security:
         - bearerAuth: []
       responses:
@@ -246,6 +259,7 @@ paths:
     get:
       tags: [Invoice]
       summary: Busca um orçamento pelo ID
+      operationId: getInvoice
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -260,10 +274,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InvoiceResponse'
+    put:
+      tags: [ Invoice ]
+      summary: Atualiza os dados de um produto
+      operationId: updateInvoice
+      security: [ bearerAuth: [ ] ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InvoiceResponse'
+      responses:
+        '200':
+          description: Produto atualizado
 
     delete:
       tags: [Invoice]
       summary: Remove um orçamento
+      operationId: deleteInvoice
       security: [ bearerAuth: [] ]
       parameters:
         - name: id
@@ -317,6 +352,8 @@ components:
         email: { type: string }
         password: { type: string }
         document: { type: string }
+        createdAt: { type: string, format: date-time }
+        updatedAt: { type: string, format: date-time }
         address:
           $ref: '#/components/schemas/Address'
 
@@ -329,6 +366,8 @@ components:
         email: { type: string }
         document: { type: string }
         ownerId: { type: string }
+        createdAt: { type: string, format: date-time }
+        updatedAt: { type: string, format: date-time }
         address:
           $ref: '#/components/schemas/Address'
 
@@ -367,7 +406,8 @@ components:
         id: { type: string }
         userId: { type: string }
         clientId: { type: string }
-        date: { type: string, format: date-time }
+        createdAt: { type: string, format: date-time }
+        updatedAt: { type: string, format: date-time }
         total: { type: number, format: double }
         discount: { type: number, format: double }
         items:
